--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
   "name": "pkgtree",
   "version": "1.0.0",
-  "description": "",
+  "description": "Show dependency tree of node project.",
   "main": "lib/index.js",
   "bin": {
     "pkgtree": "lib/index.js"
   },
+  "keywords": [
+    "cli",
+    "tree-structure",
+    "node-package",
+  ],
   "scripts": {
     "test": "ava",
-    "lint": "standard"
+    "lint": "standard",
+    "fix": "standard --fix"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "chunqiuyiyu",
+  "license": "MIT",
   "devDependencies": {
     "ava": "^0.25.0",
     "standard": "^12.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chunqiuyiyu/pkgtree.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chunqiuyiyu/pkgtree/issues"
+  },
+  "homepage": "https://github.com/chunqiuyiyu/pkgtree#readme"
 }
